# forgeone

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md
doc/: DESIGN.md  lang.md
rs/: Cargo.toml
rs/src/: env.rs  lib.rs  main.rs  nn.rs  policy.rs  rng.rs  runner.rs
scripts/: llama_server_install.sh  llama_server_run.sh
src/: .gitignore  CLAUDE.md  Makefile  base.rs  env.c  env.h  env.rs  eval.rs  lib.rs  main.c  main.rs  nn.c  nn.h  nn.rs  policy.c  policy.h  policy.rs  rng.rs  runner.c  runner.h  runner.rs  simple_json.rs  test.c  test_grad.c  train.rs  trainer_grpo.rs  trainer_reinforce.rs
src/src/: lib.rs  main.rs  policy.rs  runner.rs  train.rs
