[package]
name = "hermes_nn"
version = "0.1.0"
edition = "2024"

# No dependencies: the PRNG is hand-rolled so the crate stays std-only,
# matching the repo's "no third-party libraries" rule.

[lib]
path = "src/lib.rs"

[[bin]]
name = "cart"
path = "src/main.rs"

# `eval` runs every policy `RUNS` times and reports average reward.
[[bin]]
name = "eval"
path = "src/eval.rs"

[profile.release]
lto = true
